--- a/arch/arm/configs/bcrom_defconfig
+++ b/arch/arm/configs/bcrom_defconfig
@@ -42,8 +42,8 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="PlainKernel1.0"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-PlainKernel1.0"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -457,7 +457,7 @@ CONFIG_LGE_BOOTLOADER_LOG=y
 CONFIG_LGE_BOOTLOADER_TIME_CHECKER=y
 CONFIG_LGE_USES_SMD_DS_TTY=y
 CONFIG_LGE_KSWITCH=y
-CONFIG_LCD_KCAL=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_LGE_QSDL_SUPPORT is not set
 CONFIG_LGE_QFPROM_INTERFACE=y
 CONFIG_LGE_DIAG_BYPASS=y
