--- a/arch/arm/configs/bcrom_defconfig
+++ b/arch/arm/configs/bcrom_defconfig
@@ -233,6 +233,7 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_NOOP=y
 CONFIG_DEFAULT_IOSCHED="ZEN"
 
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
